# monzo-analysis

./: .env.example  .gitignore  CLAUDE.md  DESIGN-PLAN.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py  002_add_account_id_to_budgets_rules.py  003_add_budget_groups.py  004_add_balance_to_accounts.py  005_backfill_account_id_not_null.py  006_normalise_start_day.py  007_budget_soft_delete.py  008_budget_periods.py  009_envelope_balances.py  010_transaction_envelope_fields.py  011_category_rule_flags.py  012_review_fixes.py  013_add_target_budget_id_fk.py  014_drop_target_category_column.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: accounts.py  annual.py  auth.py  budget_groups.py  budget_import.py  budgets.py  dashboard.py  envelope_dashboard.py  income.py  merchants.py  pots.py  review_queue.py  rules.py  surplus.py  sync.py  transactions.py  trends.py
backend/app/models/: __init__.py  account.py  (+11 more)
backend/tests/: conftest.py  test_annual.py  test_api_dashboard.py  test_api_transactions.py  test_auth.py  test_budget.py  test_budget_group.py  test_budget_import.py  test_budget_period.py  test_config.py  test_envelope_dashboard.py  test_envelope_models.py  test_health_checks.py  test_income.py  test_main.py  test_merchants.py  test_models.py  test_pot.py  test_recurring.py  test_review_queue.py  test_rules.py  test_scheduler.py  test_slack.py  test_surplus.py  test_sync.py  test_transaction_assignment.py  test_trends.py
(+97 files in other folders)
